Solved report view error on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -713,9 +713,10 @@ textarea {
   }
   .width24
   {
-    width: 33%;
+    width: 24%;
 
   }
+
 
 }
 .wordwrapformobile
